# Recompiled-Samples

./: .gitattributes  CONTINUATION_PROMPT.md  README.md  STATIC_RECOMP_ARCHITECTURE.md
RAGE_GTA_IV/: CMakeLists.txt  Makefile  Makefile.xeniart  code_review_prompt.md  extract_tls.py  gta4_full_log.txt  gta4_full_log_10.txt  gta4_full_log_11.txt  gta4_full_log_12.txt  gta4_full_log_2.txt  gta4_full_log_3.txt  gta4_full_log_4.txt  gta4_full_log_6.txt  gta4_full_log_7.txt  gta4_full_log_8.txt  gta4_xeniart  host_stubs.cpp  init_functions.txt  kernel_bridge.cpp  kernel_bridge_remaining.inc  kernel_bridge_xenia.cpp  kernel_bridge_xeniart.cpp  kernel_impl.cpp  kernel_impl_real.cpp  kernel_impl_xenia.cpp  main.cpp  main_standalone.cpp  main_xeniart.cpp  premake5.lua  test_mmap  test_mmap.cpp  thirdparty_stubs.cpp
RAGE_GTA_V/: config.toml
RAGE_GTA_V/XenonAnalyse/: function.h
RAGE_GTA_V/XenonRecomp/: gtav_functions.h  pch.h  recompiler.cpp
RAGE_GTA_V/XenonTests/: CMakeLists.txt
RAGE_GTA_V/ppc/: ppc_config.h  ppc_func_mapping.cpp  ppc_recomp.0.cpp  ppc_recomp.1.cpp  ppc_recomp.10.cpp  ppc_recomp.100.cpp  ppc_recomp.101.cpp  ppc_recomp.102.cpp  ppc_recomp.103.cpp  ppc_recomp.104.cpp  ppc_recomp.105.cpp  ppc_recomp.106.cpp  ppc_recomp.107.cpp  ppc_recomp.108.cpp  ppc_recomp.109.cpp  ppc_recomp.11.cpp  ppc_recomp.110.cpp  (+239 more)
RAGE_MaxPayne/: config.toml
RAGE_MidnightClub/: config.toml  mcla_switch_tables.toml
RAGE_RedDead/: config.toml
RAGE_TableTennis/: config.toml  ppc_context.h
rage_runtime/: Makefile.template  config.h  rage_main_template.cpp  rage_runtime.h
(+545 files in other folders)
