cmake_minimum_required(VERSION 3.16)
project(gta4 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
add_definitions(-DXENIA_STATIC_RECOMP=1 -DPPC_IMAGE_BASE=0x82000000ull -DPPC_IMAGE_SIZE=0x11F0000ull -DPPC_CODE_BASE=0x82120000ull -DPPC_CODE_SIZE=0x8F3D5Cull)
include_directories(../.. ../../src ../../third_party ../../third_party/simde/simde .)
file(GLOB SOURCES "main.cpp" "ppc_func_mapping.cpp" "ppc_recomp.*.cpp" "kernel_impl.cpp")
add_executable(gta4 ${SOURCES})
target_compile_options(gta4 PRIVATE -Wno-unused-variable -Wno-unused-but-set-variable)
find_package(Threads REQUIRED)
target_link_libraries(gta4 Threads::Threads)
